--- a/docs/api-reference/integrations/update-webhook-integration.mdx
+++ b/docs/api-reference/integrations/update-webhook-integration.mdx
@@ -4,7 +4,7 @@ openapi: put /open/forms/{form}/integrations/{integrationid}
 
 # Update Webhook Integration
 
-Modify an existing webhook integration's URL or status.
+Modify an existing webhook integration's URL, secret, headers, or status.
 
 ## Authentication & Scope
 
@@ -13,29 +13,42 @@ This endpoint requires a **Personal Access Token** with the `manage-integrations
 ## Request
 
 <ParamField path="form" type="number" required>
-The ID of the form containing the webhook.
+    The ID of the form containing the webhook.
 </ParamField>
 
 <ParamField path="integrationid" type="number" required>
-The ID of the webhook integration to update.
+    The ID of the webhook integration to update.
 </ParamField>
 
 <ParamField body="integration_id" type="string" required>
-Must be set to `"webhook"`.
+    Must be set to `"webhook"`.
 </ParamField>
 
 <ParamField body="status" type="string">
-The status of the webhook. Allowed values: `"active"`, `"inactive"`.
+    The status of the webhook. Allowed values: `"active"`, `"inactive"`.
 </ParamField>
 
 <ParamField body="data" type="object" required>
-Configuration object containing webhook details.
+Configuration object containing webhook details. All fields are optional.
 
 <Expandable title="data properties">
 <ParamField body="webhook_url" type="string">
 The updated URL where form submissions will be sent. Must be a valid HTTP/HTTPS URL.
 </ParamField>
+
+<ParamField body="webhook_secret" type="string">
+    Update the signing secret for HMAC-SHA256 validation. Must be at least 12
+    characters. Provide a new value to rotate the secret.
+</ParamField>
+
+<ParamField body="webhook_headers" type="object">
+Update custom HTTP headers. Replaces all existing headers with the provided ones. Maximum 10 headers allowed. See blocked headers list below for restricted header names.
+</ParamField>
 </Expandable>
+</ParamField>
+
+<ParamField body="logic" type="object">
+    Update the conditional logic for webhook triggering.
 </ParamField>
 
 <RequestExample>
@@ -47,7 +60,12 @@ curl -X PUT 'https://api.opnform.com/open/forms/123/integrations/42' \
     "integration_id": "webhook",
     "status": "active",
     "data": {
-      "webhook_url": "https://new-endpoint.com/opnform-hook"
+      "webhook_url": "https://new-endpoint.com/opnform-hook",
+      "webhook_secret": "whsec_newsecret123456789abcdef",
+      "webhook_headers": {
+        "X-API-Key": "new-api-key",
+        "X-Custom-ID": "updated-value"
+      }
     }
   }'
 ```
@@ -67,7 +85,12 @@ curl -X PUT 'https://api.opnform.com/open/forms/123/integrations/42' \
     "integration_id": "webhook",
     "status": "active",
     "data": {
-      "webhook_url": "https://new-endpoint.com/opnform-hook"
+      "webhook_url": "https://new-endpoint.com/opnform-hook",
+      "webhook_secret": "whsec_newsecret123456789abcdef",
+      "webhook_headers": {
+        "X-API-Key": "new-api-key",
+        "X-Custom-ID": "updated-value"
+      }
     }
   }
 }
@@ -83,10 +106,36 @@ curl -X PUT 'https://api.opnform.com/open/forms/123/integrations/42' \
 <ResponseExample>
 ```json Error
 {
-  "message": "The webhook url must be a valid URL.",
+  "message": "The given data was invalid.",
   "errors": {
-    "data.webhook_url": ["The webhook url must be a valid URL."]
+    "data.webhook_secret": ["The webhook secret must be at least 12 characters."],
+    "data.webhook_headers": ["The 'Authorization' header cannot be customized for security reasons."]
   }
 }
 ```
 </ResponseExample>
+
+## Security
+
+### Secret Rotation
+
+When updating the `webhook_secret`, the new secret will be used for all future webhook requests. Existing webhook attempts with the old secret will fail validation on the receiver's end.
+
+If you need to rotate your secret, consider implementing a grace period on your receiving endpoint to accept both old and new secrets during the transition.
+
+### Blocked Headers
+
+For security reasons, the following headers cannot be customized in `webhook_headers`:
+
+-   `Authorization`
+-   `X-Webhook-Signature`
+-   `Content-Type`
+-   `Content-Length`
+-   `Host`
+-   `Cookie`
+-   `X-CSRF-Token`
+-   `X-Forwarded-For`
+-   `X-Forwarded-Proto`
+-   `X-Real-IP`
+
+For signature validation implementation examples, see [Validating Webhook Signatures](/api-reference/integrations/webhook-security).
