Enhance form components with focused mode improvements and accessibility updates
- Updated `useFormInput` to improve UI merging for Tailwind variants, ensuring better conflict resolution.
- Introduced `FocusedSelectorInput` and `FocusedToggleInput` components for enhanced user experience in focused mode.
- Modified `BlockRenderer` to default to focused components based on presentation style and field properties.
- Enhanced `OpenFormFocused` to manage focus behavior more effectively, including preventing scroll during focus.
- Added new methods in `PresentationStyleSwitch` to enable and disable focused components dynamically based on user selections.
- Updated various form fields to support focused mode features, including checkbox styles and dropdown behavior.
- Improved internationalization files to include toggle options for better user interface consistency across languages.

--- a/client/i18n/lang/ar.json
+++ b/client/i18n/lang/ar.json
@@ -68,6 +68,10 @@
             }
         },
         "validation_error": "خطأ في التحقق",
-        "validation_error_with_count": "خطأ في التحقق ({count} حقول)"
+        "validation_error_with_count": "خطأ في التحقق ({count} حقول)",
+        "toggle": {
+            "yes": "نعم",
+            "no": "لا"
+        }
     }
 } 
