--- a/client/i18n/lang/nl.json
+++ b/client/i18n/lang/nl.json
@@ -68,6 +68,10 @@
             }
         },
         "validation_error": "Validatiefout",
-        "validation_error_with_count": "Validatiefout ({count} velden)"
+        "validation_error_with_count": "Validatiefout ({count} velden)",
+        "toggle": {
+            "yes": "Ja",
+            "no": "Nee"
+        }
     }
 }
