--- a/client/i18n/lang/pl.json
+++ b/client/i18n/lang/pl.json
@@ -68,6 +68,10 @@
             }
         },
         "validation_error": "Błąd walidacji",
-        "validation_error_with_count": "Błąd walidacji ({count} pola)"
+        "validation_error_with_count": "Błąd walidacji ({count} pola)",
+        "toggle": {
+            "yes": "Tak",
+            "no": "Nie"
+        }
     }
 } 
