--- a/client/i18n/lang/sr.json
+++ b/client/i18n/lang/sr.json
@@ -68,7 +68,11 @@
             }
         },
         "validation_error": "Greška pri validaciji",
-        "validation_error_with_count": "Greška pri validaciji ({count} polja)"
+        "validation_error_with_count": "Greška pri validaciji ({count} polja)",
+        "toggle": {
+            "yes": "Да",
+            "no": "Не"
+        }
     }
 }
 
