--- a/client/i18n/lang/zh.json
+++ b/client/i18n/lang/zh.json
@@ -68,6 +68,10 @@
             }
         },
         "validation_error": "验证错误",
-        "validation_error_with_count": "验证错误 ({count} 个字段)"
+        "validation_error_with_count": "验证错误 ({count} 个字段)",
+        "toggle": {
+            "yes": "是",
+            "no": "否"
+        }
     }
 } 
