--- a/client/i18n/lang/gl.json
+++ b/client/i18n/lang/gl.json
@@ -68,6 +68,10 @@
             }
         },
         "validation_error": "Erro de validación",
-        "validation_error_with_count": "Erro de validación ({count} campos)"
+        "validation_error_with_count": "Erro de validación ({count} campos)",
+        "toggle": {
+            "yes": "Si",
+            "no": "Non"
+        }
     }
 } 
