--- a/client/i18n/lang/hi.json
+++ b/client/i18n/lang/hi.json
@@ -68,6 +68,10 @@
             }
         },
         "validation_error": "सत्यापन त्रुटि",
-        "validation_error_with_count": "सत्यापन त्रुटि ({count} फ़ील्ड)"
+        "validation_error_with_count": "सत्यापन त्रुटि ({count} फ़ील्ड)",
+        "toggle": {
+            "yes": "हाँ",
+            "no": "नहीं"
+        }
     }
 } 
