--- a/docs/deployment/docker-development.mdx
+++ b/docs/deployment/docker-development.mdx
@@ -22,7 +22,7 @@ OpnForm provides a minimal Docker-based development environment optimized for lo
 1. Clone the repository:
 
     ```bash
-    git clone https://github.com/JhumanJ/OpnForm.git
+    git clone https://github.com/OpnForm/OpnForm.git
     cd OpnForm
     ```
 
