--- a/docs/deployment/docker.mdx
+++ b/docs/deployment/docker.mdx
@@ -17,7 +17,7 @@ import CloudVersion from "/snippets/cloud-version.mdx";
 
 1. Clone the repository:
     ```bash
-    git clone https://github.com/JhumanJ/OpnForm.git
+    git clone https://github.com/OpnForm/OpnForm.git
     cd OpnForm
     ```
 
