Remove MIT License file and implement OIDC authentication features
- Deleted the LICENSE-MIT file as it is no longer needed.
- Updated LoginController to block password-based login when OIDC force_login is enabled.
- Enhanced FeatureFlagsController to include OIDC availability and forced login status.
- Added userIdentities and identityConnections methods in User and Workspace models, respectively.
- Updated AppServiceProvider to bind OIDC connections for policy checks.
- Integrated OIDC routes in api.php for managing OIDC connections and authentication.
- Enhanced LoginTest to validate OIDC login behavior and password fallback.
- Updated various components to support OIDC features and improve user experience.

--- a/docs/configuration/environment-variables.mdx
+++ b/docs/configuration/environment-variables.mdx
@@ -14,6 +14,7 @@ The following environment variables are used to [configure the Laravel](https://
 There are dedicated configuration pages available for more detailed setup instructions on specific topics:
 
 -   [OAuth Integration Setup](../configuration/oauth-setup)
+-   [OIDC SSO Configuration](../configuration/oidc-sso)
 -   [File Storage (S3)](../configuration/aws-s3)
 -   [Email Configuration (SMTP)](../configuration/email-setup)
 -   [Custom Domain](../configuration/custom-domain)
@@ -21,21 +22,22 @@ There are dedicated configuration pages available for more detailed setup instru
 
 ### Configuration Environment Variables
 
-| Variable Name                    | Description                                                                                                                   |
-| -------------------------------- | ----------------------------------------------------------------------------------------------------------------------------- |
-| `H_CAPTCHA_SITE_KEY`             | Site key for hCaptcha integration.                                                                                            |
-| `H_CAPTCHA_SECRET_KEY`           | Secret key for hCaptcha integration.                                                                                          |
-| `RE_CAPTCHA_SITE_KEY`            | Site key for reCAPTCHA integration.                                                                                           |
-| `RE_CAPTCHA_SECRET_KEY`          | Secret key for reCAPTCHA integration.                                                                                         |
-| `OPEN_AI_API_KEY`                | API key for accessing OpenAI services.                                                                                        |
-| `UNSPLASH_ACCESS_KEY`            | Access key for Unsplash API.                                                                                                  |
-| `UNSPLASH_SECRET_KEY`            | Secret key for Unsplash API.                                                                                                  |
-| `FRONT_URL`                      | Public facing URL of the front-end.                                                                                           |
-| `FRONT_API_SECRET`               | Shared secret with the front-end.                                                                                             |
-| `JWT_TTL`                        | Time to live for JSON Web Tokens (JWT).                                                                                       |
-| `JWT_SECRET`                     | Secret key used to sign JWTs.                                                                                                 |
-| `JWT_SKIP_IP_UA_VALIDATION`      | Set to `true` to disable JWT IP and User Agent validation (defaults to `false`). Useful for dynamic IPs.                      |
-| `CUSTOM_CODE_ENABLE_SELF_HOSTED` | Enables execution of user-provided custom code on self-hosted deployments. Defaults to `false` for safety reasons (XSS etc.). |
+| Variable Name                    | Description                                                                                                                                                                               |
+| -------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `H_CAPTCHA_SITE_KEY`             | Site key for hCaptcha integration.                                                                                                                                                        |
+| `H_CAPTCHA_SECRET_KEY`           | Secret key for hCaptcha integration.                                                                                                                                                      |
+| `RE_CAPTCHA_SITE_KEY`            | Site key for reCAPTCHA integration.                                                                                                                                                       |
+| `RE_CAPTCHA_SECRET_KEY`          | Secret key for reCAPTCHA integration.                                                                                                                                                     |
+| `OPEN_AI_API_KEY`                | API key for accessing OpenAI services.                                                                                                                                                    |
+| `UNSPLASH_ACCESS_KEY`            | Access key for Unsplash API.                                                                                                                                                              |
+| `UNSPLASH_SECRET_KEY`            | Secret key for Unsplash API.                                                                                                                                                              |
+| `FRONT_URL`                      | Public facing URL of the front-end.                                                                                                                                                       |
+| `FRONT_API_SECRET`               | Shared secret with the front-end.                                                                                                                                                         |
+| `JWT_TTL`                        | Time to live for JSON Web Tokens (JWT).                                                                                                                                                   |
+| `JWT_SECRET`                     | Secret key used to sign JWTs.                                                                                                                                                             |
+| `JWT_SKIP_IP_UA_VALIDATION`      | Set to `true` to disable JWT IP and User Agent validation (defaults to `false`). Useful for dynamic IPs.                                                                                  |
+| `OIDC_FORCE_LOGIN`               | When set to `true`, password-based authentication is disabled and users must authenticate via OIDC SSO. See [Force Login Mode](../configuration/oidc-sso#7-force-login-mode) for details. |
+| `CUSTOM_CODE_ENABLE_SELF_HOSTED` | Enables execution of user-provided custom code on self-hosted deployments. Defaults to `false` for safety reasons (XSS etc.).                                                             |
 
 ### OAuth Integration Environment Variables
 
