Update OIDC SSO documentation to reflect changes in Enterprise feature availability
- Changed warning to informational note regarding OIDC SSO as part of the Enterprise Edition.
- Clarified that during the beta period, OIDC SSO is free for self-hosted users and available on the Pro plan for cloud users.
- Added a link to the Enterprise Terms for more information on licensing.

--- a/docs/configuration/oidc-sso.mdx
+++ b/docs/configuration/oidc-sso.mdx
@@ -3,13 +3,14 @@ title: OIDC SSO Configuration
 description: Complete guide to configuring OpenID Connect Single Sign-On for your workspace
 ---
 
-<Warning>
-    **Enterprise Feature**: OIDC SSO is restricted to our Enterprise plan. This
-    feature is currently under development and not yet available. Documentation
-    will be updated when the feature is released. For more information or to
-    inquire about Enterprise access, please contact us at
-    [julien@opnform.com](mailto:julien@opnform.com).
-</Warning>
+<Info>
+    **Enterprise Feature**: OIDC SSO is part of our Enterprise Edition. During
+    the beta period: - **Self-hosted**: Free to use (no subscription required) -
+    **Cloud**: Available on Pro plan (will move to Enterprise plan soon) This
+    feature helps fund ongoing development and keeps OpnForm sustainable. For
+    more information about Enterprise licensing, see our [Enterprise
+    Terms](https://opnform.com/terms-conditions).
+</Info>
 
 OpnForm supports OpenID Connect (OIDC) based Single Sign-On (SSO), allowing users to authenticate using their organization's identity provider (IdP) such as Azure Entra ID, Authentik, Okta, or any OIDC-compliant provider.
 
